start structuring menus, adding assets and theming

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -1,2 +1,9 @@
 general:
   message: 'Hello, world'
+
+api:
+  auth:
+    general: 'Bad auth'
+    jwtExpired: 'JWT expired'
+  another:
+    thing: 'something'
