work on sessions page
- restructure AppWrapper to programatically generate links
- setup sessions page
- add whats-on asset
- add sessions tab bar

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -3,6 +3,7 @@ general:
   loginButton: Log in
   appName: Climate:Red
   pleaseSelect: Please select
+  comingSoon: (Coming Soon)
 
 api:
   auth:
@@ -65,6 +66,16 @@ profile:
   localeText: Default language
   whenText: Logged in
   logoutButton: Log out
+
+sessions:
+  title: What's on
+  tabs:
+    plenary:
+      title: Speakers
+    panel:
+      title: Panels
+    sessions:
+      title: Sessions
 
 schedule:
   title: Schedule
