first pass at sessions page
- pulls in schedule/settings
- fix tabs logic for logged-in/scheduleLive
- add session cards
- move pickApi to utils and add pickCdn
- update track colors
- update atrium to point to sessions

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -97,3 +97,15 @@ terms:
 privacy:
   title: Privacy
   backButton: Back to atrium
+
+sessionCard:
+  type:
+    ignite-talk: Ignite talk
+    games: Games
+    panel: Panel
+    workshop: Workshop
+    virtual-tour: Virtual tour
+    plenary: Keynote
+    speaker: Speaker
+    fishbowl: Fishbowl
+  hostedBy: Hosted by
