--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -53,3 +53,59 @@ register:
   genericError: _
   submitButton: Inscrivez
   doneText: Nous vous avons envoyé un e-mail de vérification.
+
+profile:
+  title: _
+  emailText: _
+  localeText: _
+  whenText: _
+  nameText: _
+  countryText: _
+  affiliationText: _
+  logoutButton: _
+  deleteButton: _
+  deleteText: _
+
+sessions:
+  title: _
+  tabs:
+    plenary: _
+    panel: _
+    sessions: _
+
+schedule:
+  title: _
+
+coffeechat:
+  title: _
+
+help:
+  title: _
+
+notFound:
+  title: _
+
+terms:
+  title: _
+
+privacy:
+  title: _
+
+sessionCard:
+  hostedBy: _
+
+data:
+  type:
+    ignite-talk: _
+    games: _
+    panel: _
+    workshop: _
+    virtual-tour: _
+    plenary: _
+    speaker: _
+    fishbowl: _
+  theme:
+    act: _
+    empower: _
+    influence: _
+    transform: _
