--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -21,9 +21,10 @@ login:
   infoText: We'll send you an email to confirm who you are. The email will
     have a link in it which will log you in. It will expire after 30
     minutes. If you don't recieve anything check your spam folder.
-  emailLabel: Email
-  emailPlaceholder: e.g. geoff@example.com
-  emailHelp: The email address you registered to the conference with
+  email:
+    label: Email
+    placeholder: e.g. geoff@example.com
+    help: The email address you registered to the conference with
   badEmail: Bad email
   doneText: Login code sent
   submitButton: Request login code
