--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -97,16 +97,16 @@ sessionCard:
 
 data:
   type:
-    ignite-talk: _
-    games: _
-    panel: _
-    workshop: _
-    virtual-tour: _
+    ignite-talk: جلسة لطرح الأفكار
+    games: ألعاب للتعلم و الحوار
+    panel: أفرقة خبراء ونقاشات
+    workshop: حلقات عملية
+    virtual-tour: جولات افتراضية
     plenary: _
     speaker: _
-    fishbowl: _
+    fishbowl: حل المشاكل أسلوب الحلقتين
   theme:
-    act: _
-    empower: _
-    influence: _
-    transform: _
+    act: العمل
+    empower: التمكين
+    influence: التأثير
+    transform: التحويل
