update assets and translations

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -46,9 +46,9 @@ register:
     help: حتى نتمكن من رؤية مدى تغطية المؤتمر
   affiliation:
     label: جهة الانتساب
-    placeholder:
+    placeholder: ''
     help: 'جهة الانتماء (على سبيل المثال: موظف/متطوع/عضو مجلس إدارة/عضو جمعية وطنية/الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر/اللجنة الدولية للصليب الأحمر/المركز المرجعي، أو غير ذلك )'
-  consentText: _ # waiting on duplication
+  consentText: أؤكد أنني قد قرأت وأوافق على الشروط والأحكام وسياسة الخصوصية في الرابط أدناه
   termsLink: الأحكام والشروط
   privacyLink: سياسة الخصوصية
   genericError: حدث خطأ ما. أعد المحاولة من فضلك
