--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -21,7 +21,7 @@ login:
   infoText: بعد التسجيل ، سوف نرسل لك رسالة تأكيد بالبريد الإلكتروني. سيكون في البريد الإلكتروني رابط ، والذي سيسجل دخولك. ستنتهي صلاحية الرابط بعد 30 دقيقة. إذا لم تتلق أي شيء ، فيرجى التحقق من ملف الرسائل الغير مرغوب بها.
   email:
     label: البريد الإلكتروني
-    placeholder: e.g. geoff@example.com
+    placeholder: ''
     help: عنوان البريد الإلكتروني الذي سجلت به في المؤتمر
   submitButton: طلب رمز تسجيل الدخول
   doneText: تم إرسال رمز تسجيل الدخول
@@ -32,11 +32,11 @@ register:
   infoText: التسجيل لمؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ
   name:
     label: الاسم الكامل
-    placeholder: e.g. Dan Howard
+    placeholder: ''
     help: اسمك الكامل
   email:
     label: عنوان البريد الالكتروني
-    placeholder: e.g. dan@example.com
+    placeholder: ''
     help: ستستخدم بريدك الإلكتروني لتسجيل الدخول إلى المؤتمر
   language:
     label: لغة
@@ -46,9 +46,9 @@ register:
     help: حتى نتمكن من رؤية مدى تغطية المؤتمر
   affiliation:
     label: جهة الانتساب
-    placeholder: ''
+    placeholder: على سبيل المثال، موظف الاتحاد الدولي للصليب الأحمر والهلال الأحمر
     help: 'جهة الانتماء (على سبيل المثال: موظف/متطوع/عضو مجلس إدارة/عضو جمعية وطنية/الاتحاد الدولي لجمعيات الصليب الأحمر والهلال الأحمر/اللجنة الدولية للصليب الأحمر/المركز المرجعي، أو غير ذلك )'
-  consentText: أؤكد أنني قد قرأت وأوافق على الشروط والأحكام وسياسة الخصوصية في الرابط أدناه
+  consentText: أؤكد أنني قد قرأت وأوافق على السياسات الموجودة في الرابط أدناه
   termsLink: الأحكام والشروط
   privacyLink: سياسة الخصوصية
   genericError: حدث خطأ ما. أعد المحاولة من فضلك
