--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -48,10 +48,10 @@ register:
     help: So we can see the reach of the conference
   affiliation:
     label: Your affiliation
-    placeholder: ''
+    placeholder: e.g. IFRC staff member
     help: Affiliation with the RCRC movement (e.g. staff/volunteer/board member/member of national society/IFRC/ICRC/reference center/none)
   submitButton: Register
-  consentText: I confirm that I have read and agree with the Terms and Privacy policy linked below
+  consentText: I confirm that I have read and agree with the policies linked below
   termsLink: Terms and Conditions
   privacyLink: Privacy policy
   genericError: Something went wrong, please try again
