--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -31,7 +31,7 @@ login:
 
 register:
   title: Register
-  infoText: Register for Climate:Red
+  infoText: Use this form to register for Climate:Red
   name:
     label: Full name
     placeholder: e.g. Dan Howard
@@ -55,7 +55,11 @@ register:
   termsLink: Terms and Conditions
   privacyLink: Privacy policy
   genericError: Something went wrong, please try again
-  doneText: We've sent you a verification email ...
+  doneText: |
+    Thanks for registering!
+    We've sent you an verification email.
+    Click the link in that email to verify and see the conference schedule.
+    If you don't see an email soon please check your spam folder.
 
 profile:
   title: Your profile
@@ -113,3 +117,9 @@ data:
     empower: Empower
     influence: Influence
     transform: Transform
+
+cookies:
+  title: Cookies
+  popupTitle: Our use of cookies
+  acceptAction: Allow analytics
+  rejectAction: Disable analytics
