add coming-soon to AppWrapper

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -4,6 +4,7 @@ general:
   registerButton: سجل الان!
   appName: Climate:Red
   pleaseSelect: يرجى التحديد
+  comingSoon: قريبا
 #
 # api:
 #   auth:
