--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -4,6 +4,7 @@ general:
   registerButton: Register Now!
   appName: Climate:Red
   pleaseSelect: Please select
+  comingSoon: Coming soon
 
 api:
   auth:
