--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -4,6 +4,7 @@ general:
   registerButton: ¡Regístrate ahora!
   appName: Climate:Red
   pleaseSelect: Por favor seleccionar
+  comingSoon: Próximamente
 #
 # api:
 #   auth:
