Work on cookies
- add translations in
- move cookie.content to yaml file
- fix bulma buttons rtl
- allow language changing with cookie popup
- made content links bold

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -112,3 +112,13 @@ data:
     empower: التمكين
     influence: التأثير
     transform: التحويل
+
+cookies:
+  title: ملفات تعريف الارتباط
+  popupTitle: استخدامنا لملفات تعريف الارتباط
+  acceptAction: السماح بتفعيل أدوات التحليل
+  rejectAction: إلغاء تفعيل أدوات التحليل
+  content: |
+    نحن نستخدم ملفات تعريف الارتباط الضرورية لتشغيل الموقع بشكل صحيح
+    نود استخدام التحليلات لمعرفة تجارب الناس في مؤتمر قمة الصليب الأحمر والهلال الأحمر للمناخ و لضمان قدرتنا على تحسين المؤتمرات الافتراضية ومؤتمرات القمة المستقبلية
+    يمكنك تغيير تفضيلات ملفات تعريف الارتباط الخاصة بك من خلال النقر{0} في تذييل هذا الموقع
