--- a/src/i18n/fr.yml
+++ b/src/i18n/fr.yml
@@ -112,3 +112,13 @@ data:
     empower: Donner les moyens d’agir
     influence: Influencer
     transform: Transformer
+
+cookies:
+  title: Cookies
+  popupTitle: Notre utilisation des cookies
+  acceptAction: Autoriser l'analyse des donnés
+  rejectAction: Désactiver l'analyse des données
+  content: |
+    Nous utilisons les cookies nécessaires au bon fonctionnement du site.
+    Nous aimerions pouvoir les analyser afin de voir comment les gens vivent le sommet Climate:RED et ainsi nous assurer que nous pouvons améliorer les futures conférences et sommets virtuels.
+    Vous pouvez modifier vos préférences en cliquant sur {0} dans le pied de page du site.
