--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -5,6 +5,7 @@ general:
   appName: Climate:Red
   pleaseSelect: Please select
   comingSoon: Coming soon
+  backTo: Back to {0}
 
 api:
   auth:
@@ -128,3 +129,33 @@ cookies:
     We use necessary cookies to make the site work.
     We'd like to use analytics to see how people experience the Climate:RED summit and to ensure that we can improve future virtual conferences and summits. 
     You can change your preference by clicking {0} in the site footer.
+
+interpretHome:
+  title: Interpretation
+  subtitle: Use this page to navigate the session's you're assigned to interpret for
+  goto: Interpret mode
+
+interpretSchedule:
+  heading:
+    session: Session
+    slot: Slot
+    date: Date
+    start: Start
+    end: End
+    language: Floor language
+    actions: Interpret
+
+interpret:
+  title: Interpreting session
+  sessionLabel: 'Session title:'
+  floorLabel: 'Floor language:'
+  outputLabel: 'Output language:'
+  live: You are live
+  testLabel: Test mic
+  startAction: Go Live
+  stopAction: Disconnect
+  takeoverActionLabel: Request takeover
+  takeoverStatusLabel: status
+  plusMins: now | 1 min | {count} mins
+  noResponse: No response
+  acceptedBy: Accepted by {0}
