--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -16,6 +16,8 @@ atrium:
   or: or
   sessionsButton: See what's on!
   returnTo: Back to atrium
+  heroTitle: Virtual Climate Summit 2020
+  heroSubtitle: Sept 9, 12:00PM – Sept 10 19:00PM CEST
 
 login:
   title: Login
